<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingVertical="16dp">
    <TextView
        android:id="@+id/numer"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        android:layout_marginEnd="350dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"

        />
    <TextView
        android:id="@+id/timeofsong"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginStart="310dp"

        />
    <TextView
        android:id="@+id/nameofsong"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_of_song"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginEnd="100dp"
android:gravity="start"
        />
    <TextView
        android:id="@+id/singer"
        android:gravity="start"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/singer"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginEnd="200dp"
        android:layout_marginTop="30dp"
        android:textStyle="italic"

        />
</androidx.constraintlayout.widget.ConstraintLayout>